# youtube-vault-archiver

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  file_mover.py  gemini_api.py  logger.py  md_writer.py  youtube.py
