[project]
name = "youtube-vault-archiver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "dotenv==0.9.9",
    "google-ai-generativelanguage==0.4.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.111.0",
    "google-auth==2.25.2",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.0",
    "google-genai==1.33.0",
    "google-generativeai==0.3.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "grpcio-status==1.62.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.30.0",
    "httpx==0.28.1",
    "idna==3.10",
    "isort==6.0.1",
    "oauthlib==3.3.1",
    "proto-plus==1.26.1",
    "protobuf==4.25.8",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dotenv==1.0.0",
    "pytz==2025.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "websockets==15.0.1",
]
